Set tag to latest

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,5 +30,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: latest
-          labels: latest
+          tags: cdnzrh/pru:latest
